# design-patterns-labs

lab1/: 1-dynamic-polymorphism.c  1-dynamic-polymorphism.h  2-virtual-tables.cpp  2-virtual-tables.h  2c-virtual-tables.c  2c-virtual-tables.h  3-memory-price.cpp  3-memory-price.h  4-time-price.cpp  4-time-price.h  4-time-price.s  5-manual-vtable-call.cpp  5-manual-vtable-call.h  6-polimorphism-while-constructing.cpp  6-polimorphism-while-constructing.h  6-polimorphism-while-constructing.s  CMakeLists.txt  main.cpp  zadaci.txt
lab2/: task3.py
lab2/table-calculator/: build.gradle.kts  nums.txt  output.txt  settings.gradle.kts
lab2/table-calculator/gradle/wrapper/: gradle-wrapper.properties
lab2/table-calculator/src/main/kotlin/design/patterns/distribution/: DistributionTester.kt
lab2/table-calculator/src/main/kotlin/design/patterns/stream/: NumberStream.kt
lab2/tasks0-2/: CMakeLists.txt  foo.c  foo.h  main.cpp  task0.cpp  task0.h  task1.c  task1.h  task2.cpp  task2.h
lab3/c-tasks/: CMakeLists.txt  main.cpp  myfactory.c  myfactory.h  parrot.c  task1.1.c  task1.1.h  task1_3.cpp  task1_3.h  tiger.c
lab3/gui/: settings.gradle.kts
lab3/gui/gradle/wrapper/: gradle-wrapper.properties
lab3/gui/src/main/kotlin/design/patterns/gui/: Location.kt  (+6 more)
lab3/parser/: settings.gradle.kts
lab3/parser/gradle/wrapper/: gradle-wrapper.properties
lab3/py-tasks/: factory.py
lab3/py-tasks/plugins/: parrot.py  tiger.py
lab4/vector-graphics-editor/: build.gradle.kts  graphics.txt  settings.gradle.kts
lab4/vector-graphics-editor/gradle/wrapper/: gradle-wrapper.properties
(+37 files in other folders)
